# opencv

./: CMakeLists.txt  Dockerfile  devcontainer.json  docker-compose.yml
rapport/: rapport.md
ressources/: solution.txt
src/: evaluator.cpp  main.cpp
